[package]
name = "rwx_im"
version = "0.1.0"
authors = ["Mikkel Kroman <mk@maero.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
rdedup-lib = "3.1"
rust-s3 = "0.26"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
# Try to keep `url` pegged to the same version as `rdedup-lib`
url = "1"
